--- a/OEP-5/OEP-5.mediawiki
+++ b/OEP-5/OEP-5.mediawiki
@@ -1,6 +1,6 @@
 <pre>
   OEP: 5
-  Title: dApp web API
+  Title: dApp web API (dAPI)
   Author: Matus Zamborsky <zamborsky@gmail.com>
   Type: Meta
   Status: Draft
@@ -9,17 +9,38 @@
 
 ==Abstract==
 
-An Javascript API is proposed for dApps development. This API allows dApps to communicate with Ontology blockchain and make requests for transfers, ONT ID registration and others without requiring users to trust the dApp itself. The trust issue is shifted to the API implementation provider.
+A Javascript API is proposed for dApps development. This dAPI allows dApps to communicate with Ontology blockchain and make requests for transfers, ONT ID registration and others, without requiring users to trust the dApp itself. The issue of trust is shifted to the dAPI provider.
 
 ==Motivation==
 
 Currently a dApp will use one of the SDKs (Typescript, Java, Python, ...) to communicate with Ontology network. This setup has two main disadvantages:
 
-1. User of the dApp will have to trust with his private keys to the dApp developer and that information about transfers mediated through the dApp are legitimate.
+1. User of the dApp will have to trust the dApp developer with his private keys and that information about transfers mediated through the dApp are legitimate.
 
 2. Although the SDKs are very powerful, they are hard to use. A more streamlined API will allow developers to focus on the application itself.
 
 ==Specification==
+
+This proposal makes use of the following functions and definitions:
+
+*'''SDK''', a software development kit implementing low level communication with the network and providing high level interface for dApps.
+
+*'''dApp''', an application with decentralized characteristics running in web environment. The application uses Ontology network for value transfers, contracts enforcing and identification between participants.
+
+*'''dAPI''', the API for dApps this OEP is proposing.
+
+*'''dAPI provider''', an implementation of the dAPI in the form of web browser plugin or other means, where a user interaction with the provider can be injected into api call workflow (e.g.: confirming transfer)
+
+===dAPI grouping===
+Although this proposal is bringing clear and simple API for the dApps, the individual functions can be divided into these groups:
+
+* '''Network''', a thin wrapper around the Ontology Node Websocket API, masking the complexity of websockets with Request-Response facade.
+
+* '''Runtime''', a main point of integration with the dAPI provider, where the issue of trust is shifted from dApp to dApp provider.
+
+* '''Smart contract''', a high level wrapper around the Smart Contract invocation and deployment.
+
+* '''Utils''', a group of utility function for encoding and decoding the data from/to blockchain.
 
 ==Rationale==
 
