--- a/OEP-5/OEP-5.mediawiki
+++ b/OEP-5/OEP-5.mediawiki
@@ -20,9 +20,6 @@ Currently a dApp will use one of the SDKs (Typescript, Java, Python, ...) to com
 2. Although the SDKs are very powerful, they are hard to use. A more streamlined API will allow developers to focus on the application itself.
 
 ==Specification==
-API specification is a complex document. Every method has some inputs and outputs. Although we use the primitive types (numbers, strings, booleans) whenever possible, there are places where a complex object is required. To preciselly describe the structure of those objects, we'd chosen Typescript syntax.
-
-===Definitions===
 This proposal makes use of the following functions and definitions:
 
 *'''SDK''', a software development kit implementing low level communication with the network and providing high level interface for dApps.
@@ -32,8 +29,6 @@ This proposal makes use of the following functions and definitions:
 *'''dAPI''', the API for dApps this OEP is proposing.
 
 *'''dAPI provider''', an implementation of the dAPI in the form of web browser plugin or other means, where a user interaction with the provider can be injected into api call workflow (e.g.: confirming transfer)
-
-
 
 ===dAPI grouping===
 Although this proposal is bringing clear and simple API for the dApps, the individual functions can be divided into these groups:
@@ -46,10 +41,16 @@ Although this proposal is bringing clear and simple API for the dApps, the indiv
 
 * '''Utils''', a group of utility function for encoding and decoding the data from/to blockchain.
 
+===Complex structures===
+API specification is a complex document. Every method has some inputs and outputs. Although we use the primitive types (numbers, strings, booleans) whenever possible, there are places where a complex object is required. To preciselly describe the structure of those objects, we'd chosen Typescript syntax.
+
 ===Network===
 A network API consists of:
 
 <pre>
+type Network = 'MAIN' | 'TEST' | 'PRIVATE';
+type Asset = 'ont' | 'ong';
+
 function getGenerateBlockTime(): Promise<number | null>
 function getNodeCount(): Promise<number>
 function getBlockHeight(): Promise<number>
@@ -59,8 +60,10 @@ function getAllowance(asset: Asset, fromAddress: string, toAddress: string): Pro
 function getBlock(block: number | string): Promise<Block>
 function getTransaction(txHash: string): Promise<Transaction>
 function getNetwork(): Network
-function getBalance(address: string, asset: Asset): Promise<BigNumber>
+function getBalance(address: string): Promise<Balance>
 </pre>
+
+For further explanation about the wrapped method consult https://ontio.github.io/documentation/restful_api_en.html . The types '''Transaction''', '''Block''', '''MerkleProof''' and '''Balance''' corresponds to the exact object returned from Ontology blockchain. '''BigNumber''' corresponds to a implementation of BigNumbers.
 
 ==Rationale==
 
