--- a/OEP-5/OEP-5.mediawiki
+++ b/OEP-5/OEP-5.mediawiki
@@ -89,9 +89,7 @@ function getBalance(address: string): Promise<Balance>
 For further explanation about the wrapped method consult https://ontio.github.io/documentation/restful_api_en.html . The types '''Transaction''', '''Block''', '''MerkleProof''' and '''Balance''' corresponds to the exact object returned from Ontology blockchain. '''BigNumber''' corresponds to a implementation of BigNumbers.
 
 ===Runtime.Asset===
-A primary focus of Runtime.Asset API is to enumerate the addresses under user control and initiate a transfer of ong withdrawal. The request needs to be confirmed by the user.
-
-A Runtime.Asset API consists of:
+A primary focus of Runtime.Asset API is to enumerate the addresses under user control and initiate a transfer. The request needs to be confirmed by the user.
 
 ====getOwnAddresses====
 <pre>
