--- a/OEP-5/OEP-5.mediawiki
+++ b/OEP-5/OEP-5.mediawiki
@@ -24,6 +24,8 @@ This proposal makes use of the following functions and definitions:
 
 *'''SDK''', a software development kit implementing low level communication with the network and providing high level interface for dApps.
 
+*'''SHA256''', a well-known hashing algorithm that takes an arbitrary number of bytes as input and deterministically yields a 32-byte hash.
+
 *'''dApp''', an application with decentralized characteristics running in web environment. The application uses Ontology network for value transfers, contracts enforcing and identification between participants.
 
 *'''dAPI''', the API for dApps this OEP is proposing.
@@ -91,29 +93,29 @@ For further explanation about the wrapped method consult https://ontio.github.io
 ===Runtime.Asset===
 A primary focus of Runtime.Asset API is to enumerate the addresses under user control and initiate a transfer. The request needs to be confirmed by the user.
 
-====getOwnAddresses====
+====getOwnAccounts====
 <pre>
-function getOwnAddresses(): string[]
+function getOwnAccounts(): string[]
 </pre>
 
-Returns all the addresses associated with logged in user.
+Returns all the accounts associated with logged in user.
 
-====getDefaultAddress====
+====getDefaultAccount====
 <pre>
-function getDefaultAddress(): string | null
+function getDefaultAccount(): string | null
 </pre>
-Returns currently selected address of logged in user or null if there is none.
+Returns currently selected account of logged in user or null if there is none.
 
 ====makeTransfer====
 <pre>
-function makeTransfer(senderAddress: string, recipientAddress: string, asset: Asset, amount: BigNumber): Promise<void>
+function makeTransfer(sender: string, recipient: string, asset: Asset, amount: BigNumber): Promise<void>
 </pre>
 
-Initiates a transfer of <code>amount asset</code> from <code>senderAddress</code> to <code>recipientAddress</code>. The <code>senderAddress</code> must be one of the addresses returned by <code>getOwnAddresses</code>.
+Initiates a transfer of <code>amount asset</code> from <code>sender</code> account to <code>recipient</code> account. The <code>sender</code> must be one of the accounts returned by <code>getOwnAccounts</code>.
 
 
 ===Runtime.Identity===
-A primary focus of Runtime.Identity API is to enumerate the ONT-ID identities under user control and initiate a process of adding/removing attribute from the identity. The request needs to be confirmed by the user. 
+A primary focus of Runtime.Identity API is to enumerate the ONT ID identities under user control and initiate a process of adding/removing attribute from the identity. The request needs to be confirmed by the user. 
 
 ====getOwnIdentities====
 <pre>
@@ -162,16 +164,45 @@ Removes attribute from the identity. The <code>ontId</code> must be one of the i
 ===Runtime.Message===
 This API deals with arbitrary message signing and verification. For security reasons, the API will prepend the supplied the message with known prefix or typed messages needs to be used.
 
+====signMessageHash====
 <pre>
-function signMessage(messageHash: string): Promise<string>
-function verifyMessage(messageHash: string, signature: string): Promise<boolean>
-
-function signPersonalMessage(message: string): Promise<string>
-function verifyPersonalMessage(message: string, signature: string): Promise<boolean>
-
-function signTypedMessage(message: TypedMessage): Promise<string>
-function verifyTypedMessage(message: TypedMessage, signature: string): Promise<boolean>
+function signMessageHash(messageHash: string, accountOrIdentity: string): Promise<string>
 </pre>
+
+Initiates signing of arbitrary <code>messageHash</code> by the account or identity. The <code>accountOrIdentity</code> '''must''' be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
+
+This method does not require the dApp to disclose the message itself, only the hash. 
+
+Because malicious dApp can hash a real prepared transfer transaction and plant it for signing, that posses a risk to the user.
+Therefore the hash is prepended with known string '''Ontology message:''', hashed with '''SHA-256''' and only this hash is put for signing.
+
+====verifyMessageHash====
+<pre>
+function verifyMessageHash(messageHash: string, accountOrIdentity: string, signature: string): Promise<boolean>
+</pre>
+
+Verifies that the <code>signature</code> is created by the account or identity over <code>messageHash</code>. The <code>accountOrIdentity</code> '''does not''' need to be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
+
+This method does not require the dApp to disclose the message itself, only the hash. 
+
+
+====signMessage====
+<pre>
+function signMessage(message: string, accountOrIdentity: string): Promise<string>
+</pre>
+
+Initiates signing of text <code>message</code> by the account or identity. The <code>accountOrIdentity</code> '''must''' be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
+
+This method provide the dAPI provider with the message body, which it should display to the user prior to signing (e.g.: a contract to sign). Signing is done on '''SHA-256''' hash of the message.
+
+====verifyMessage====
+<pre>
+function verifyMessage(message: string, accountOrIdentity: string, signature: string): Promise<boolean>
+</pre>
+
+Verifies that the <code>signature</code> is created by the account or identity over text <code>message</code>. The <code>accountOrIdentity</code> '''does not''' need to be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
+
+Verification is done on '''SHA-256''' hash of the message.
 
 
 ==Rationale==
