--- a/OEP-5/OEP-5.mediawiki
+++ b/OEP-5/OEP-5.mediawiki
@@ -32,24 +32,22 @@ This proposal makes use of the following functions and definitions:
 
 *'''dAPI provider''', an implementation of the dAPI in the form of web browser plugin or other means, where a user interaction with the provider can be injected into api call workflow (e.g.: confirming transfer)
 
-===dAPI grouping===
-Although this proposal is bringing clear and simple API for the dApps, the individual functions can be divided into these groups:
+===Components===
+Although this proposal is bringing clear and simple API for the dApps, the individual functions can be divided into these components:
 
 * '''Network''', a thin wrapper around the Ontology Node API, masking the complexity of rpc/rest calls and websockets with Request-Response facade.
 
-* '''Runtime.*''', a main point of integration with the dAPI provider, where the issue of trust is shifted from dApp to dApp provider.
+* '''Asset''', functions for transfering assets between user account and others.
 
-* '''Runtime.Asset''', functions for transfering assets between user account and others.
+* '''Identity''', functions for interacting with own ONT-ID identity.
 
-* '''Runtime.Identity''', functions for interacting with own ONT-ID identity.
+* '''SmartContract''', a high level wrapper around the Smart Contract invocation and deployment.
 
-* '''Runtime.SmartContract''', a high level wrapper around the Smart Contract invocation and deployment.
-
-* '''Runtime.Message''', functions for signing arbitrary messages.
+* '''Message''', functions for signing arbitrary messages.
 
 * '''Utils''', a group of utility function for encoding and decoding the data from/to blockchain.
 
-===Account/Identity management and transaction signing ===
+===Account/Identity managemen===
 Because dAPI shifts the issue of trust from dApp to dApp provider, all account and identity management is external to the dApp. Therefore there are no methods which directly handle private keys. The dApp won't need to sign the transaction itself. 
 
 Any time dApp makes a call that requires a private key to sign something (makeTransfer, sign), dApp provider will inform user about the action and prompt him for permission.
@@ -90,7 +88,7 @@ function getBalance(address: string): Promise<Balance>
 
 For further explanation about the wrapped method consult https://ontio.github.io/documentation/restful_api_en.html . The types '''Transaction''', '''Block''', '''MerkleProof''' and '''Balance''' corresponds to the exact object returned from Ontology blockchain. '''BigNumber''' corresponds to a implementation of BigNumbers.
 
-===Runtime.Asset===
+===Asset===
 A primary focus of Runtime.Asset API is to enumerate the addresses under user control and initiate a transfer. The request needs to be confirmed by the user.
 
 ====getOwnAccounts====
@@ -114,7 +112,7 @@ function makeTransfer(sender: string, recipient: string, asset: Asset, amount: B
 Initiates a transfer of <code>amount asset</code> from <code>sender</code> account to <code>recipient</code> account. The <code>sender</code> must be one of the accounts returned by <code>getOwnAccounts</code>.
 
 
-===Runtime.Identity===
+===Identity===
 A primary focus of Runtime.Identity API is to enumerate the ONT ID identities under user control and initiate a process of adding/removing attribute from the identity. The request needs to be confirmed by the user. 
 
 ====getOwnIdentities====
@@ -161,7 +159,7 @@ function removeAttribute(ontId: string, key: string): Promise<void>
 Removes attribute from the identity. The <code>ontId</code> must be one of the identities returned by <code>getOwnIdentities</code>.
 
 
-===Runtime.Message===
+===Message===
 This API deals with arbitrary message signing and verification.
 
 ====signMessageHash====
@@ -183,7 +181,7 @@ function verifyMessageHash(messageHash: string, accountOrIdentity: string, signa
 
 Verifies that the <code>signature</code> is created by the account or identity over <code>messageHash</code>. The <code>accountOrIdentity</code> '''does not''' need to be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
 
-This method does not require the dApp to disclose the message itself, only the hash. 
+This method does not require the dApp to disclose the message itself, only the hash. The hash is prepended with known string '''Ontology message:''', hashed with '''SHA-256''' and only this hash is put for verification.
 
 
 ====signMessage====
@@ -203,6 +201,8 @@ function verifyMessage(message: string, accountOrIdentity: string, signature: st
 Verifies that the <code>signature</code> is created by the account or identity over text <code>message</code>. The <code>accountOrIdentity</code> '''does not''' need to be one of the accounts returned by <code>getOwnAccounts</code> or identities returned by <code>getOwnIdentities</code>.
 
 Verification is done on '''SHA-256''' hash of the message.
+
+===SmartContract===
 
 
 ==Rationale==
