--- a/README.mediawiki
+++ b/README.mediawiki
@@ -32,4 +32,10 @@ First review [[OEP-1.mediawiki|OEP-1]]. Then clone the repository and add your O
 | community
 | Meta
 | Active
+|-
+| [[OEP-6|6]]
+| API for dApps (dAPI)
+| community
+| Standard
+| Draft
 |}
