--- a/OEP-6/OEP-6.mediawiki
+++ b/OEP-6/OEP-6.mediawiki
@@ -36,6 +36,8 @@ This proposal makes use of the following functions and definitions:
 
 *'''Notify event''', an event broadcasted from smart contract execution.
 
+*'''NEOVM''', a lightweight virtual machine for execution of Neo/Ontology smart contracts.
+
 
 ===Components===
 Although this proposal is bringing clear and simple API for the dApps, the individual functions can be divided into these components:
@@ -85,7 +87,7 @@ function getBalance(address: string): Promise<Balance>
 For further explanation about the wrapped method consult https://ontio.github.io/documentation/restful_api_en.html . The types '''Transaction''', '''Block''', '''MerkleProof''' and '''Balance''' corresponds to the exact object returned from Ontology blockchain. '''BigNumber''' corresponds to a implementation of BigNumbers.
 
 ===Asset===
-A primary focus of Runtime.Asset API is to enumerate the addresses under user control and initiate a transfer. The request needs to be confirmed by the user.
+A primary focus of Asset API is to enumerate the addresses under user control and initiate a transfer. The request needs to be confirmed by the user.
 
 ====getOwnAccounts====
 <pre>
@@ -109,7 +111,7 @@ Initiates a transfer of <code>amount asset</code> from <code>sender</code> accou
 
 
 ===Identity===
-A primary focus of Runtime.Identity API is to enumerate the ONT ID identities under user control and initiate a process of adding/removing attribute from the identity. The request needs to be confirmed by the user. 
+A primary focus of Identity API is to enumerate the ONT ID identities under user control and initiate a process of adding/removing attribute from the identity. The request needs to be confirmed by the user. 
 
 ====getOwnIdentities====
 <pre>
@@ -242,6 +244,15 @@ function invokeRead(contract: string, method: string, parameters: Parameter[]): 
 </pre>
 
 Initiates a <code>method</code> call to a smart <code>contract</code> with supplied <code>parameters</code> in read only mode (preExec). This kind of method call does not write anything to blockchain and therefore does not need to be signed or paid for. It is processed without user interaction.
+
+====deploy====
+<pre>
+function invokeRead(code: string, name: string, version: string, author: string, 
+    email: string, description: string, needStorage: boolean, gasPrice: BigNumber, gasLimit: BigNumber): Promise<any>
+</pre>
+
+Initiates deployment of smart contract. The <code>code</code> parameter represents compiled code of smart contract for NEOVM. The <code>gasPrice</code> and <code>gasLimit</code> are hints for the dAPI provider and it should allow user to override those values before signing.
+
 
 ====addEventListener====
 <pre>
