--- a/OEP-6/OEP-6.mediawiki
+++ b/OEP-6/OEP-6.mediawiki
@@ -1,6 +1,6 @@
 <pre>
   OEP: 6
-  Title: API for dApps (dAPI)
+  Title: API for dApps (dAPI) and communication protocol for dAPI providers
   Author: Matus Zamborsky <zamborsky@gmail.com>
   Type: Standard
   Status: Draft
@@ -9,7 +9,11 @@
 
 ==Abstract==
 
-A Javascript API is proposed for dApps development. This dAPI allows dApps to communicate with Ontology blockchain and make requests for transfers, ONT ID registration and others, without requiring users to trust the dApp itself. The issue of trust is shifted to the dAPI provider.
+This proposal has two major parts:
+
+* A Javascript API is proposed for dApps development. This dAPI allows dApps to communicate with Ontology blockchain and make requests for transfers, ONT ID registration and others, without requiring users to trust the dApp itself. The issue of trust is shifted to the dAPI provider.
+
+* A Communication protocol is proposed for dAPI provider development. This allows multiple Wallet implementators to offer the same unified service to users of dApps and prevent fragmentation of dApp development.
 
 ==Motivation==
 
@@ -275,6 +279,14 @@ The interaction between dApp and Ontology network can be described with this dia
 
 [[Image:OEP-6-1.svg|Architecture]]
 
+===Yellow parts===
+These components are external to this proposal.
+
+===Green parts===
+'''dAPI.js''' is universal implementation of this proposal for direct use by dApp developers.
+
+===Blue parts===
+These components all belongs to concrete implementation of dAPI provider. The implementation is out of scope of this proposal, but the implementator must adhere to the protocol used by dAPI.js.
 
 ==Rationale==
 
